Remove irrelevant casting methods that return only a BooleanFormula and do not depend on RationalFormula.
And shorten some code that was added for overriding theory-independent default behaviour.
Only Princess seems to need separate handling for Integers and Rationals.